@@ -62,7 +62,9 @@ and a tutorial all-in-one.
 \input{modpython4} % Python API
 \input{modpython5} % Apache directives
 \input{modpython6} % Handlers
-
+\appendix
+\input{appendixa}  % Windows Install
+\input{appendixb}  % VMS Install
 
 \input{modpython.ind}
 
