@@ -44,7 +44,7 @@
  *
  * mod_python.c 
  *
- * $Id: mod_python.c,v 1.41 2000/12/06 03:05:37 gtrubetskoy Exp $
+ * $Id: mod_python.c,v 1.42 2000/12/13 05:24:08 gtrubetskoy Exp $
  *
  * See accompanying documentation and source code comments 
  * for details.
@@ -86,10 +86,9 @@ PyInterpreterState *make_interpreter(const char *name, server_rec *srv)
     }
     else {
 
-#ifdef WITH_THREAD
         /* release the thread state */
         PyThreadState_Swap(NULL); 
-#endif
+
         /* Strictly speaking we don't need that tstate created
 	 * by Py_NewInterpreter but is preferable to waste it than re-write
 	 * a cousin to Py_NewInterpreter 
@@ -113,7 +112,7 @@ interpreterdata *get_interpreter_data(const char *name, server_rec *srv)
     interpreterdata *idata = NULL;
     
     if (! name)
-	name = GLOBAL_INTERPRETER;
+	name = MAIN_INTERPRETER;
 
     p = PyDict_GetItemString(interpreters, (char *)name);
     if (!p)
@@ -148,10 +147,8 @@ interpreterdata *get_interpreter_data(const char *name, server_rec *srv)
 void python_cleanup(void *data)
 {
     interpreterdata *idata;
-
-#ifdef WITH_THREAD
     PyThreadState *tstate;
-#endif
+
     cleanup_info *ci = (cleanup_info *)data;
 
 #ifdef WITH_THREAD  
@@ -183,10 +180,12 @@ void python_cleanup(void *data)
         return;
     }
     
-#ifdef WITH_THREAD  
     /* create thread state and acquire lock */
     tstate = PyThreadState_New(idata->istate);
+#ifdef WITH_THREAD  
     PyEval_AcquireThread(tstate);
+#else
+    PyThreadState_Swap(tstate);
 #endif
 
     /* 
@@ -231,7 +230,6 @@ void python_cleanup(void *data)
 	Py_DECREF(svalue);
     }
      
-#ifdef WITH_THREAD
     /* release the lock and destroy tstate*/
     /* XXX Do not use 
      * . PyEval_ReleaseThread(tstate); 
@@ -241,6 +239,7 @@ void python_cleanup(void *data)
      */
     PyThreadState_Swap(NULL);
     PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
     PyEval_ReleaseLock();
 #endif
 
@@ -288,10 +287,11 @@ void python_init(server_rec *s, pool *p)
 #ifdef WITH_THREAD
 	/* create and acquire the interpreter lock */
 	PyEval_InitThreads();
+#endif
 	/* Release the thread state because we will never use 
 	 * the main interpreter, only sub interpreters created later. */
         PyThreadState_Swap(NULL); 
-#endif
+
 	/* create the obCallBack dictionary */
 	interpreters = PyDict_New();
 	if (! interpreters) {
@@ -301,7 +301,6 @@ void python_init(server_rec *s, pool *p)
 	}
 	
 #ifdef WITH_THREAD
-	
 	/* release the lock; now other threads can run */
 	PyEval_ReleaseLock();
 #endif
@@ -555,9 +554,7 @@ static int python_handler(request_rec *req, char *handler)
     py_dir_config * conf;
     int result;
     const char * interpreter = NULL;
-#ifdef WITH_THREAD
     PyThreadState *tstate;
-#endif
 
     /* get configuration */
     conf = (py_dir_config *) ap_get_module_config(req->per_dir_config, &python_module);
@@ -646,10 +643,12 @@ static int python_handler(request_rec *req, char *handler)
         return HTTP_INTERNAL_SERVER_ERROR;
     }
     
-#ifdef WITH_THREAD  
     /* create thread state and acquire lock */
     tstate = PyThreadState_New(idata->istate);
+#ifdef WITH_THREAD 
     PyEval_AcquireThread(tstate);
+#else
+    PyThreadState_Swap(tstate);
 #endif
 
     if (!idata->obcallback) {
@@ -660,9 +659,10 @@ static int python_handler(request_rec *req, char *handler)
         {
 	    ap_log_rerror(APLOG_MARK, APLOG_NOERRNO|APLOG_ERR, req,
 			  "python_handler: make_obcallback returned no obCallBack!");
-#ifdef WITH_THREAD
+
 	    PyThreadState_Swap(NULL);
 	    PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
 	    PyEval_ReleaseLock();
 #endif
 	    return HTTP_INTERNAL_SERVER_ERROR;
@@ -676,7 +676,7 @@ static int python_handler(request_rec *req, char *handler)
     if (interpreter)
 	ap_table_set(req->notes, "python_interpreter", interpreter);
     else
-	ap_table_set(req->notes, "python_interpreter", GLOBAL_INTERPRETER);
+	ap_table_set(req->notes, "python_interpreter", MAIN_INTERPRETER);
     
     /* create/acquire request object */
     request_obj = get_request_object(req);
@@ -712,7 +712,6 @@ static int python_handler(request_rec *req, char *handler)
     resultobject = PyObject_CallMethod(idata->obcallback, "Dispatch", "Os", 
 				       request_obj, handler);
      
-#ifdef WITH_THREAD
     /* release the lock and destroy tstate*/
     /* XXX Do not use 
      * . PyEval_ReleaseThread(tstate); 
@@ -722,6 +721,7 @@ static int python_handler(request_rec *req, char *handler)
      */
     PyThreadState_Swap(NULL);
     PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
     PyEval_ReleaseLock();
 #endif
 
@@ -815,9 +815,7 @@ void python_cleanup_handler(void *data)
     const char *s;
     py_dir_config * conf;
     const char * interpreter = NULL;
-#ifdef WITH_THREAD
     PyThreadState *tstate;
-#endif
     
     /* get configuration */
     conf = (py_dir_config *) ap_get_module_config(req->per_dir_config, &python_module);
@@ -891,10 +889,12 @@ void python_cleanup_handler(void *data)
         return;
     }
     
-#ifdef WITH_THREAD  
     /* create thread state and acquire lock */
     tstate = PyThreadState_New(idata->istate);
+#ifdef WITH_THREAD  
     PyEval_AcquireThread(tstate);
+#else
+    PyThreadState_Swap(tstate);
 #endif
 
     if (!idata->obcallback) {
@@ -905,9 +905,9 @@ void python_cleanup_handler(void *data)
         {
 	    ap_log_rerror(APLOG_MARK, APLOG_NOERRNO|APLOG_ERR, req,
 			  "python_cleanup_handler: make_obcallback returned no obCallBack!");
-#ifdef WITH_THREAD
 	    PyThreadState_Swap(NULL);
 	    PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
 	    PyEval_ReleaseLock();
 #endif
 	    return;
@@ -921,7 +921,7 @@ void python_cleanup_handler(void *data)
     if (interpreter)
 	ap_table_set(req->notes, "python_interpreter", interpreter);
     else
-	ap_table_set(req->notes, "python_interpreter", GLOBAL_INTERPRETER);
+	ap_table_set(req->notes, "python_interpreter", MAIN_INTERPRETER);
     
     /* create/acquire request object */
     request_obj = get_request_object(req);
@@ -951,7 +951,6 @@ void python_cleanup_handler(void *data)
     PyObject_CallMethod(idata->obcallback, "Dispatch", "Os", 
 			request_obj, handler);
      
-#ifdef WITH_THREAD
     /* release the lock and destroy tstate*/
     /* XXX Do not use 
      * . PyEval_ReleaseThread(tstate); 
@@ -961,6 +960,7 @@ void python_cleanup_handler(void *data)
      */
     PyThreadState_Swap(NULL);
     PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
     PyEval_ReleaseLock();
 #endif
 
@@ -1282,9 +1282,7 @@ static const char *directive_PythonLogHandler(cmd_parms *cmd, void * mconfig,
 void python_finalize(void *data)
 {
     interpreterdata *idata;
-#ifdef WITH_THREAD
     PyThreadState *tstate;
-#endif
 
 
 #ifdef WITH_THREAD  
@@ -1295,9 +1293,14 @@ void python_finalize(void *data)
 
 #ifdef WITH_THREAD
     PyEval_ReleaseLock();
+#endif
+
     /* create thread state and acquire lock */
     tstate = PyThreadState_New(idata->istate);
+#ifdef WITH_THREAD
     PyEval_AcquireThread(tstate);
+#else
+    PyThreadState_Swap(tstate);
 #endif
 
     Py_Finalize();
@@ -1321,9 +1324,7 @@ static void PythonChildInitHandler(server_rec *s, pool *p)
     interpreterdata *idata;
     int i;
     const char *interpreter;
-#ifdef WITH_THREAD
     PyThreadState *tstate;
-#endif
 
     /*
      * Cleanups registered first will be called last. This will
@@ -1369,10 +1370,12 @@ static void PythonChildInitHandler(server_rec *s, pool *p)
 		return;
 	    }
 
-#ifdef WITH_THREAD  
 	    /* create thread state and acquire lock */
 	    tstate = PyThreadState_New(idata->istate);
+#ifdef WITH_THREAD  
 	    PyEval_AcquireThread(tstate);
+#else
+	    PyThreadState_Swap(tstate);
 #endif
 
 	    if (!idata->obcallback) {
@@ -1381,9 +1384,10 @@ static void PythonChildInitHandler(server_rec *s, pool *p)
 		if (!idata->obcallback) {
 		    ap_log_error(APLOG_MARK, APLOG_NOERRNO|APLOG_ERR, s,
 				 "python_handler: get_obcallback returned no obCallBack!");
-#ifdef WITH_THREAD
+
 		    PyThreadState_Swap(NULL);
 		    PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
 		    PyEval_ReleaseLock();
 #endif
 		    return;
@@ -1410,9 +1414,9 @@ static void PythonChildInitHandler(server_rec *s, pool *p)
 			     "directive_PythonImport: error importing %s", module);
 	    }
 
-#ifdef WITH_THREAD
 	    PyThreadState_Swap(NULL);
 	    PyThreadState_Delete(tstate);
+#ifdef WITH_THREAD
 	    PyEval_ReleaseLock();
 #endif
 
